--- a/1-5.css
+++ b/1-5.css
@@ -3,11 +3,34 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
 }
-header{
+
+a {
+  text-decoration: none;
+}
+
+header {
   width: 90%;
   padding: 15px 0;
   margin: 0 auto;
+  text-align: center;
+}
+
+.header.heading {
+  font-size: 32px;
+}
+
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
 
 .main-visual {
@@ -37,7 +60,14 @@ header{
   height: 1400px; /* 高さ1400px */
 }
 
-footer{
-  width: 100px;
+footer {
+  width: 100%;
   height: 120px;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+  color: #fff;
 }
